# usbexplorer

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: release.yml
completions/: _usbexplorer  usbexplorer.bash
data/: usbexplorer.desktop
docs/: xml-schema.md
man/: usbexplorer.1
packaging/: release-notes.md
packaging/system/: README.md  install.sh  uninstall.sh
po/: LINGUAS  POTFILES  meson.build  usbexplorer.pot
src/: main.c  meson.build
src/cli/: cli.h  cli_bluetooth.c  cli_diff.c  cli_dmesg.c  cli_json.c  cli_latency.c  cli_list.c  cli_speedtest.c  cli_usbmon.c  cli_watch.c  cli_xml.c
src/gui/: app.c  app.h  bluetooth_ui.c  bluetooth_ui.h  css.c  css.h  detailpanel.c  detailpanel.h  diff_ui.c  diff_ui.h  logpanel.c  logpanel.h  mainwindow.c  mainwindow.h  nodeobject.c  nodeobject.h  prefs.c  prefs.h  treeview.c  treeview.h
src/tui/: tui.h  tui_commands.c  tui_detail.c  tui_main.c  tui_search.c  tui_tree.c
src/usb/: actions.c  actions.h  badusb.c  badusb.h  bluetooth.c  bluetooth.h  descriptors.c  descriptors.h  enumerate.c  enumerate.h  history.c  history.h  monitor.c  monitor.h  report.c  report.h  speedtest.c  speedtest.h  usbmon.c  usbmon.h
src/util/: i18n.c  i18n.h  json.c  json.h  notify.c  notify.h  pciids.c  pciids.h  sysfs.c  sysfs.h  udev_rule.c  udev_rule.h  usbids.c  usbids.h  xml.c  xml.h
